tests/expectations/compiler/expression/cast_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ETYC0372045]: Strings are not yet supported.
    --> compiler-test:13:9
     |
  13 |         let b: string = a as string;
     |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372007]: Expected one type from `field, group, scalar, i8, i16, i32, i64, i128, u8, u16, u32, u64, u128, bool, address`, but got `string`
    --> compiler-test:13:25
     |
  13 |         let b: string = a as string;
     |                         ^^^^^^^^^^^
Error [ETYC0372007]: Expected one type from `field, group, scalar, i8, i16, i32, i64, i128, u8, u16, u32, u64, u128, bool, address`, but got `Foo`
    --> compiler-test:16:24
     |
  16 |         let d: field = c as field;
     |                        ^
Error [ETYC0372007]: Expected one type from `field, group, scalar, i8, i16, i32, i64, i128, u8, u16, u32, u64, u128, bool, address`, but got `(field,field)`
    --> compiler-test:19:24
     |
  19 |         let f: field = e as field;
     |                        ^
Error [ETYC0372007]: Expected one type from `field, group, scalar, i8, i16, i32, i64, i128, u8, u16, u32, u64, u128, bool, address`, but got `(field => field)`
    --> compiler-test:25:24
     |
  25 |         let b: field = balances as field;
     |                        ^^^^^^^^
"""]
